--- a/charts/cp-kafka/templates/statefulset.yaml
+++ b/charts/cp-kafka/templates/statefulset.yaml
@@ -74,7 +74,12 @@ spec:
         ports:
         - containerPort: 9092
           name: kafka
-        {{- if .Values.prometheus.jmx.enabled }}
+{{- if .Values.loadbalancer.enabled }}
+        - containerPort: 9094
+          name: external
+{{- end }}
+
+{{- if .Values.prometheus.jmx.enabled }}
         - containerPort: {{ .Values.jmx.port }}
           name: jmx
         {{- end }}
