--- a/charts/cp-kafka/values.yaml
+++ b/charts/cp-kafka/values.yaml
@@ -47,8 +47,10 @@ configurationOverrides:
   ## - https://cwiki.apache.org/confluence/display/KAFKA/KIP-103%3A+Separation+of+Internal+and+External+traffic
   ##
   ## Setting "advertised.listeners" here appends to "PLAINTEXT://${POD_IP}:9092,"
+  ## NodePort: EXTERNAL://${HOST_IP}:$((31090 + ${KAFKA_BROKER_ID}))
+  ## LoadBalancer:    EXTERNAL://{{external-hostname}}:9094
   "advertised.listeners": |-
-   EXTERNAL://${HOST_IP}:$((31090 + ${KAFKA_BROKER_ID}))
+   EXTERNAL://efd-kafka${KAFKA_BROKER_ID}.lsst.codes:9094
   "listener.security.protocol.map": |-
    PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
 
@@ -115,6 +117,10 @@ nodeport:
   enabled: false
   servicePort: 19092
   firstListenerPort: 31090
+
+loadbalancer:
+  enabled: true
+  port: 9094
 
 ## ------------------------------------------------------
 ## Zookeeper
